fix responsiveness of main container adjust the main view at mobile add hidden buttons at certain screen width remove new tweet box on mobile fix the scales fix the margins and paddings of main elements

--- a/app/assets/css/home.css
+++ b/app/assets/css/home.css
@@ -16,7 +16,21 @@ html {
 body {
   background-color: #fff;
   height: 100vh;
-  overflow: hidden;
+  overflow: clip;
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+  width: 0.3em;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(15, 20, 25, 0.2);
+  outline: none;
 }
 
 a {
@@ -178,7 +192,7 @@ a {
 
 /* text overflow*/
 .dotted-overflow {
-  display: block;
+  /* display: block; */
   max-width: 90%;
   white-space: nowrap;
   overflow: hidden !important;
@@ -190,41 +204,58 @@ main {
   width: 71%;
   height: 100%;
   /* margin-left: 29%; */
-  overflow-y: auto;
+  /* overflow-y: auto; */
 }
 
 .main-flex {
   display: flex;
   width: 100%;
+  height: 100%;
 }
 
 .main-feed {
   width: 60%;
   border-left: 1px solid rgb(29, 155, 240, 0.1);
   border-right: 1px solid rgb(29, 155, 240, 0.1);
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .home-bar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 55px;
+  /* height: 55px; */
   width: 100%;
   font-size: 2rem;
   font-weight: 700;
   color: #0f1419;
-  padding: 0 15px;
+  padding: 15px 15px;
   position: sticky;
   top: 0;
   background-color: rgb(255, 255, 255, 0.9);
 }
 
+.home-avatar a {
+  display: none;
+}
+
+.home-avatar {
+  display: flex;
+  align-items: center;
+}
+
+.home-avatar a {
+  margin-right: 10px;
+}
 /* New Tweet Form*/
 .new-tweet {
   display: flex;
   width: 100%;
-  height: 120px;
-  padding: 4px 16px;
+  /* height: 120px; */
+  padding: 20px 16px 10px 16px;
 }
 
 .new-tweet a img {
@@ -247,20 +278,21 @@ main {
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 60px;
+  /* height: 60px; */
   border-top: 1px solid rgb(15, 20, 25, 0.1);
+  padding: 10px 12px;
 }
 
 .tweet-text {
   width: 100%;
-  height: 24px;
+  /* height: 24px; */
   border: none;
   background-color: #fff;
   font-size: 2rem;
   outline: none;
   color: #0f1419;
   font-weight: 400;
-  padding: 2px 10px;
+  padding: 10px 12px;
   margin-bottom: 20px;
 }
 
@@ -272,18 +304,19 @@ main {
 
 .new-tweet-btn {
   /* padding: 1.5rem 3rem; */
-  width: 75px;
-  height: 35px;
+  /* width: 75px; */
+  /* height: 35px; */
   margin: 0;
   font-size: 1.5rem;
   font-weight: 700;
+  padding: 1.5rem 2rem;
 }
 
 /* Tweet Section*/
 .feed-tweet {
   display: flex;
   width: 100%;
-  min-height: 100px;
+  /* min-height: 100px; */
   padding: 12px 16px 0 16px;
   border-top: 1px solid rgb(15, 20, 25, 0.1);
   cursor: pointer;
@@ -293,14 +326,19 @@ main {
   display: flex;
   flex-direction: column;
   margin-left: 12px;
+  padding-right: 10px;
   width: 100%;
 }
 
 .feed-tweet i {
   color: #536471;
   font-size: 2rem;
+  max-width: 100%;
 }
 
+.tweet-details {
+  max-width: 100%;
+}
 .tweet-account-details {
   display: flex;
   align-items: flex-start;
@@ -330,18 +368,17 @@ main {
   line-height: 20px;
   color: #000;
   font-weight: 400;
-  height: auto;
 }
 
 .tweet-image {
-  width: 100%;
-  max-height: 700px;
+  max-width: 100%;
+  height: fit-content;
   margin-top: 10px;
 }
 
 .tweet-image img {
   max-width: 98%;
-  height: 100%;
+  height: auto;
   background-color: #000;
   border-radius: 16px;
 }
@@ -384,6 +421,7 @@ main {
 .right-side-explore {
   width: 40%;
   padding: 0 2%;
+  /* overflow: clip; */
 }
 
 /* serch input*/
@@ -595,29 +633,35 @@ main {
   }
 
   .main-feed {
-    width: 80%;
+    width: 100%;
+    margin-right: 30px;
   }
 
   .nav-search {
-    display: block;
+    display: block !important;
   }
 }
 
 @media only screen and (max-width: 500px) {
   .homepage {
     flex-direction: column-reverse;
-    justify-content: center;
+    justify-content: space-between;
     height: 100%;
   }
 
   main {
     margin-left: 0;
     width: 100%;
-    overflow-y: auto;
+    /* overflow-y: auto; */
+  }
+
+  .main-feed {
+    margin-right: 0;
   }
 
   .main-flex {
     justify-content: center;
+    padding-left: 20px;
   }
 
   .fixed-header {
@@ -652,16 +696,41 @@ main {
     margin: 0;
   }
 
-  .nav-tweet-button {
+  .nav-tweet-button,
+  .new-tweet-btn {
     margin: 0;
-    padding: 1rem !important;
   }
 
-  .hidden-nav-item {
+  .hidden-nav-item,
+  .nav-search {
     display: block !important;
   }
   .main-account,
   .nav-links a:first-child {
     display: none !important;
+  }
+
+  .home-avatar a {
+    display: block !important;
+  }
+
+  .new-tweet {
+    display: none !important;
+  }
+
+  .main-feed .feed-tweet:nth-child(3) {
+    margin-top: 65px;
+  }
+
+  .home-bar {
+    top: 65px;
+  }
+}
+
+@media only screen and (max-width: 350px) {
+  .nav-tweet-button,
+  .new-tweet-btn {
+    padding: 1rem !important;
+    font-size: 1.3rem;
   }
 }
